# contextos-claude-memory

./: .gitignore  CHANGELOG.md  CLAUDE_GUIDELINES.md  LICENSE  PLANS.md  README.md  install-macos.sh  install.ps1  pyproject.toml  uninstall-macos.sh  uninstall.ps1
.github/workflows/: ci.yml
Formula/: contextos.rb
assets/: README.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  CROSS_PROJECT_MEMORY.md  DOCTOR.md  PRIVACY_AND_SECURITY.md  RELEASE_CHECKLIST_v0.1.2.md  RELEASE_CHECKLIST_v0.1.3.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  ROADMAP.md  SETUP_MACOS.md  SETUP_WINDOWS.md  TROUBLESHOOTING.md  UPGRADE.md  USAGE.md  settings.example.json
examples/sample-project/: DECISIONS.md  NEXT_ACTIONS.md  PROJECT_CONTEXT.md  SESSION_LOG.md  graph.mmd
scripts/: compress-project-memory.py  contextos-capture.ps1  contextos-capture.sh  contextos-doctor.ps1  contextos-doctor.sh  contextos-find.ps1  contextos-find.sh  contextos-open.ps1  contextos-open.sh  contextos-projects.ps1  contextos-projects.sh  contextos-resume.ps1  contextos-resume.sh  contextos-start.ps1  contextos-start.sh  contextos-status.ps1  contextos-status.sh  contextos_index.py  process-session.py  test-raw-transcript-privacy.ps1
src/contextos/: __init__.py  __main__.py  cache.py  capture.py  cli.py  compress.py  confidence.py  diff.py  doctor.py  gc.py  guidelines.py  index.py  open_project.py  process.py  projects.py  resume.py  schema.py  search.py  session_log.py  start.py  status.py  tokens.py  vault.py
tests/: conftest.py  test_cache.py  test_confidence.py  test_index.py  test_process.py  test_schema.py  test_search.py  test_session_log.py  test_tokens.py
